--- a/index.html
+++ b/index.html
@@ -11,7 +11,9 @@
 </head>
 <body> 
     
-  
+  <audio autoplay="autoplay">
+        <source src="music.mp3"/>
+     </audio>
     
     <div>
         <img id="gummies" src="https://static.wixstatic.com/media/f317f6_c4272360a36143259825a0a423afe94c~mv2.png/v1/fill/w_498,h_476,al_c,q_90/file.jpg"></img>
